--- a/views/header/afficHeader.phtml
+++ b/views/header/afficHeader.phtml
@@ -6,7 +6,7 @@
 ?>
 <header id="main_header">
     <div id="header_left">
-        <a id="header_title" href="index.php">
+        <a id="header_title" href="/">
             Jean Casse-Tête
         </a>
         <?php
