work on htaccess

--- a/views/produit/afficProduit.phtml
+++ b/views/produit/afficProduit.phtml
@@ -6,7 +6,7 @@
 ?>
 <div id="affic_produit">
     <div id="produit" class="mb-5">
-        <img class="mb-3" src="assets/<?=$produit->GetImagePath()?>">
+        <img class="mb-3" src="/assets/<?=$produit->GetImagePath()?>">
         <h1 class="mb-3"><?=$produit->GetLibelle()?></h1>
         <p class="mb-3">Difficulté <?=$produit->GetDifficulte()->GetLibelle()?></p>
         <div class="mb-3"><?=$produit->GetDescription()?></div>
