work on htaccess

--- a/views/account/afficAccount.phtml
+++ b/views/account/afficAccount.phtml
@@ -21,7 +21,7 @@
     <form action="#" class="mb-3">
         <button name="form-change-account-infos" type="submit" class="btn btn-jct-orange">Changer mes informations</button>
     </form>
-    <form action="index.php?controller=account&action=doLogout" method="post">
+    <form action="/account/doLogout" method="post">
         <button name="form-disconnect" type="submit" class="btn btn-danger">Se déconnecter</button>
     </form>
 </div>
