--- a/views/header/afficHeader.phtml
+++ b/views/header/afficHeader.phtml
@@ -28,7 +28,7 @@
         ?>
     </div>
     <div id="header_right">
-        <a href="index.php?controller=panier"><i class="fas fa-shopping-cart"></i></a>
-        <a href="index.php?controller=account"><i class="fas fa-user"></i><span id="accountMsg"><?=$accountMsg?></span></a>
+        <a href="/panier"><i class="fas fa-shopping-cart"></i></a>
+        <a href="/account"><i class="fas fa-user"></i><span id="accountMsg"><?=$accountMsg?></span></a>
     </div>
 </header>
