--- a/views/categorie/afficCategorie.phtml
+++ b/views/categorie/afficCategorie.phtml
@@ -1,4 +1,9 @@
-<!--FILTRES-->
+<?php
+/**
+ * @var array $sousCategs
+ * @var array $produits
+ */
+?>
 <div id="filters_panel">
     <div id="filters_header">
         <h2>Filtres</h2>
