--- a/views/panier/afficPanier.phtml
+++ b/views/panier/afficPanier.phtml
@@ -1,6 +1,28 @@
-<div id="main_affic">
+<div id="main_affic" class="flex-column">
     <h1>Mon panier</h1>
-
-
+    <div class="container">
+    <?php
+    if(count($this->Panier()->Panier()) == 0) {
+        echo "<p>Votre panier est vide</p>";
+    } else {
+        echo "<form method='post' action='/panier/update' id='update_panier'>";
+        foreach($this->Panier()->Panier() as $lignePanier) {
+            /** @var Produit $produit */
+            $produit = $lignePanier["produit"];
+            $html  = "<div class='panier_produit py-3'>";
+            $html .= "    <img src='/assets/" . $produit->GetImagePath() . "' alt='" . $produit->GetReference() . "'>";
+            $html .= "    <div class='ms-4'>";
+            $html .= "        <p class='fs-3 mb-1 fw-bold'>" . $produit->GetLibelle() . "</p>";
+            $html .= "        <label for='qte' class='text-muted'>Qte :</label>";
+            $html .= "        <input min='0' name='panier[" . $produit->GetReference() . "]' id='qte' class='form-control' type='number' value='" . $lignePanier["qte"] . "'>";
+            $html .= "    </div>";
+            $html .= "</div>";
+            echo $html;
+        }
+        echo "<button type='submit' class='btn btn-warning'>Mettre à jour le panier</button>";
+        echo "</form>";
+    }
+    ?>
+    </div>
 </div>
 
