--- a/assets/custom/styles/main.scss
+++ b/assets/custom/styles/main.scss
@@ -100,6 +100,15 @@ div#main_wrapper {
   display:flex;
   color: $primaryLight;
 
+  //ACCUEIL
+  div#accueil {
+    width: 100%;
+    div#search_accueil {
+      text-align: center;
+      background-color: whitesmoke;
+    }
+  }
+
   //FILTRES
   #filters_panel {
     background-color: $secondary;
