Finalisation page accueil
-Ajout d'une vue pour chercher les produits les plus achetés
-Ajout d'une méthode dans ProduitManager

--- a/views/accueil/afficAccueil.phtml
+++ b/views/accueil/afficAccueil.phtml
@@ -29,7 +29,15 @@
         </div>
         <?php
     } else {
-        echo "<h1 class='text-center mt-5'>Page d'accueil bozo</h1>";
+        echo "<div class='m-4'>";
+        echo "<h2>Nos articles les plus vendus</h2>";
+        echo "<div id='main_affic'>";
+        /** @var array $produits */
+        foreach($produits as $produit) {
+            include(VUES . "/produit/ficheProduit.inc");
+        }
+        echo "</div>";
+        echo "</div>";
     }
     ?>
 </div>
