--- a/views/header/afficHeader.phtml
+++ b/views/header/afficHeader.phtml
@@ -57,8 +57,8 @@ $panier = $this->Panier()->Panier();
                 $html .= "</div>";
                 echo $html;
             }
+            echo "<a class='btn btn-warning py-1 px-2 mt-2' href='/panier'>Accèder au panier</a>";
         }
         ?>
-        <a class="btn btn-warning py-1 px-2 mt-2" href="/panier">Accèder au panier</a>
     </div>
 </div>
