--- a/views/panier/afficPanier.phtml
+++ b/views/panier/afficPanier.phtml
@@ -19,7 +19,7 @@
             $html .= "</div>";
             echo $html;
         }
-        echo "<button type='submit' class='btn btn-warning'>Mettre à jour le panier</button>";
+        echo "<button type='submit' class='btn btn-warning mt-3'>Mettre à jour le panier</button>";
         echo "</form>";
     }
     ?>
