--- a/assets/custom/styles/main.css
+++ b/assets/custom/styles/main.css
@@ -11336,6 +11336,10 @@ p {
   display: none;
 }
 
+.fs-low {
+  font-size: 0.75rem;
+}
+
 header#main_header {
   padding: 0 8px;
   background-color: #262B2F;
